<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/wod"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#CD2E2B2B"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/Editextmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/EditTextpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="16dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#97151515"
            android:text="@string/login"
            android:textColor="#E20A1517"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sign_up_here"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>