<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/wod"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".Booking">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:background="#AD2E2B2B"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/promotion"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="50sp"

            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Promotion899"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_horizontal"
                android:text="@string/_899_bath"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/Promotion599"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_horizontal"
                android:text="@string/_599_bath"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>